--- a/app/src/main/res/layout/card_view_all_products.xml
+++ b/app/src/main/res/layout/card_view_all_products.xml
@@ -75,7 +75,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="8dp"
         android:paddingLeft="5dp"
-        android:text="Special Price : "
+        android:text="Discounted Price : "
         android:textSize="16sp"
         android:textColor="@color/black"
         app:layout_constraintStart_toEndOf="@id/ll_image"
