--- a/app/src/main/res/layout/card_view_buyer_order.xml
+++ b/app/src/main/res/layout/card_view_buyer_order.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
-        android:text="Completed"
+        android:text="Pending"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
