UI changes in activity_seller_add_product.xml

--- a/app/src/main/res/layout/activity_seller_add_product.xml
+++ b/app/src/main/res/layout/activity_seller_add_product.xml
@@ -92,6 +92,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="18dp"
     android:text="Product Name"
+    android:textColor="@color/black"
     android:textStyle="bold"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
@@ -111,6 +112,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
             android:text="Product Description"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
@@ -132,6 +134,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
             android:text="Product MRP"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
@@ -153,6 +156,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
             android:text="Discounted Price"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
@@ -175,6 +179,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
             android:text="Minimum Quantity to avail discount"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
