--- a/app/src/main/res/layout/activity_all_product_desc.xml
+++ b/app/src/main/res/layout/activity_all_product_desc.xml
@@ -60,10 +60,22 @@
             android:textSize="30sp" />
 
         <TextView
+            android:id="@+id/company"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_product_desc_name"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="15dp"
+            android:textColor="@color/black"
+
+            android:text="CompanyName:" />
+
+        <TextView
             android:id="@+id/tv_product_desc_desc"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_product_desc_name"
+            android:layout_below="@+id/company"
             android:layout_alignParentStart="true"
             android:layout_marginStart="40dp"
             android:layout_marginTop="25dp"
