--- a/app/src/main/res/layout/activity_buyer_order_description.xml
+++ b/app/src/main/res/layout/activity_buyer_order_description.xml
@@ -124,7 +124,26 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginStart="20dp"
+                android:text="Company Name"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_productDetails_company"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="14dp"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:layout_marginStart="20dp"
                 android:text="Description"
                 android:textColor="@color/black"
