--- a/app/src/main/res/layout/activity_seller_products.xml
+++ b/app/src/main/res/layout/activity_seller_products.xml
@@ -24,7 +24,9 @@
             android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No Products added yet. Click on floating button to add product"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:text="No Products added yet.\n Click on floating button to add product"
             android:textColor="@color/black"
             android:layout_centerInParent="true"
             />
